--- a/hugo.toml
+++ b/hugo.toml
@@ -17,10 +17,17 @@ url = "/"
 weight = 10
 
 [[languages.en.menu.main]]
-identifier = "content"
+identifier = "bof"
 name = "BOF"
-url = "/bof/eventList"
+url = "/bof/"
 weight = 20
+
+[[languages.en.menu.main]]
+identifier = "bofeventlist"
+name = "EventList"
+parent = "bof"
+url = "/bof/eventList"
+weight = 10
 
 [[languages.en.menu.main]]
 identifier = "layouts"
@@ -70,6 +77,9 @@ name = "Search"
 url = "/search/"
 weight = 100
 
+[languages.en.menu.main.params.paige]
+divider_below = true
+
 [markup.goldmark.renderer]
 unsafe = true
 
@@ -91,13 +101,23 @@ taxonomy = ["html"]
 term = ["html"]
 
 [params.paige]
+color = "#fd0d0d" # Bootstrap primary color and theme color for Safari and Windows
+color_scheme = "auto" # Must be "auto", "dark", or "light"
+date_format = ":date_long" # Hugo date format
+external_link_new_tab = false # Open external links in new tabs
+file_edit_url = "" # Example: "https://github.com/eristocrates/neocities/tree/main/content/%s"
+file_history_url = "" # Example: "https://github.com/eristocrates/neocities/commits/main/content/%s"
+keyword_style = "text" # Must be "text" or "pills"
+math = false # Enable math typesetting
+menu_style = "underline" # Must be "links", "pills", "tabs", or "underline"
 site_description = "content for the most attractive and distinguished of eristocrats. But you can read too!"
 site_title = "the eristocracy"
+style = "" # CSS included at the end of the stylesheet, before style-last.css
 
 [[params.paige.feed.atom.authors]]
 email = "eristocrates@gmail.com"
 name = "eristocrates"
-url = "https://example.com"
+url = "ttps://github.com/eristocrates/neocities"
 
 [params.paige.feed.rss]
 managing_editor = "example@example.com (John Doe)"
