--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "puppeteer": "^22.12.1",
     "puppeteer-core": "^22.12.1"
   }
