--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "type": "module",
   "dependencies": {
+    "bunyan": "^1.8.15",
     "cli-progress": "^3.12.0",
-    "puppeteer": "^22.12.1",
-    "puppeteer-core": "^22.12.1"
+    "puppeteer": "^22.13.1",
+    "puppeteer-core": "^22.13.1"
   }
 }
