update gitignore for assets

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,291 @@
 node_modules
 .vscode/launch.json
 paigeModuleCopy
+assets\transcendium\[108407089] moments before, moments after
+assets\transcendium\[108407089] moments before, moments after\108407089_p0.jpg
+assets\transcendium\[108407089] moments before, moments after\108407089_p1.jpg
+assets\transcendium\[108407252] just, die
+assets\transcendium\[108407316] expand; contract
+assets\transcendium\[108407351] in the woods
+assets\transcendium\[108407383] damage
+assets\transcendium\[108407443] crossfading cascades
+assets\transcendium\[108407540] 迷幻藥
+assets\transcendium\[108407600] deflux, reflux
+assets\transcendium\[108407625] hypnosis; sisonpyh
+assets\transcendium\[108407660] exxxtrude
+assets\transcendium\[108407754] falling; down
+assets\transcendium\[108407800] 雪中送炭
+assets\transcendium\[108407939] see atop the snow-capped cliff
+assets\transcendium\[108407979] winter wonderland
+assets\transcendium\[108408016] by day, by night
+assets\transcendium\[108408061] i cant sleep; my eyes burn
+assets\transcendium\[108408087] drowning,,,
+assets\transcendium\[108408102] hexed
+assets\transcendium\[108408128] lightning flash
+assets\transcendium\[108408154] d e c o n s t r u c t i o n
+assets\transcendium\[108408178] paint
+assets\transcendium\[108408216] egregious dancer
+assets\transcendium\[108408258] sawblade; shredder
+assets\transcendium\[108408294] irradiate
+assets\transcendium\[108408310] untitled eye
+assets\transcendium\[108408345] untitled waves
+assets\transcendium\[108408367] untitled gilded
+assets\transcendium\[108408402] waiting,,,
+assets\transcendium\[108408472] beware of tremors
+assets\transcendium\[108408561] exposition
+assets\transcendium\[108408584] ,,,
+assets\transcendium\[108408640] collapse
+assets\transcendium\[108408716] 点火しで
+assets\transcendium\[108408847] unnamed kaleidoscope
+assets\transcendium\[108408866] unnamed blade
+assets\transcendium\[108408904] kneel before your maker
+assets\transcendium\[108408947] cave painting
+assets\transcendium\[108408973] upon and into aqua
+assets\transcendium\[108409007] myosotis branches
+assets\transcendium\[108409035] falling up; rising down
+assets\transcendium\[108409079] 風林火山陰雷
+assets\transcendium\[108409119] underwater horrors
+assets\transcendium\[108409195] blinding myself
+assets\transcendium\[108409240] 海底旋渦; 意志沉澱
+assets\transcendium\[108409267] absence of sleep
+assets\transcendium\[108409300] 谷間に咲く桜
+assets\transcendium\[108409337] Syamantaka's curse
+assets\transcendium\[108409357] hydrangea flowers
+assets\transcendium\[108409375] temptation stairway
+assets\transcendium\[108409387] great runas
+assets\transcendium\[108409409] 世內桃源
+assets\transcendium\[108409489] acidifying alkaline
+assets\transcendium\[108409529] destined death
+assets\transcendium\[108409555] 22 fold
+assets\transcendium\[108409581] °•
+assets\transcendium\[108409684] sakura mist
+assets\transcendium\[108409718] °•_--_•°
+assets\transcendium\[108409736] technicolor
+assets\transcendium\[108409763] assortment of sea shells
+assets\transcendium\[108409784] submultiply
+assets\transcendium\[108409814] star, black hole formation
+assets\transcendium\[108409841] temporal interruption
+assets\transcendium\[108409929] color me impressed
+assets\transcendium\[108409954] bismuth interference
+assets\transcendium\[108410026] -1-nm-y 【BOF-ET】
+assets\transcendium\[108410049] e^iπ
+assets\transcendium\[108410092] the room of spirit and time
+assets\transcendium\[108410209] Fever Dream 【BOF-ET】
+assets\transcendium\[108410272] anemoia
+assets\transcendium\[108410316] sweet dreams,
+assets\transcendium\[108410371] self confrontation
+assets\transcendium\[108410467] bow down
+assets\transcendium\[108410494] akashic records
+assets\transcendium\[108410567] 自我囚禁
+assets\transcendium\[108410583] acedia
+assets\transcendium\[108410662] dead eye
+assets\transcendium\[108410680] ¿-
+assets\transcendium\[108410721] kaleidoscopes
+assets\transcendium\[108410789] corruption
+assets\transcendium\[108410802] timeless
+assets\transcendium\[108410819] monochrome
+assets\transcendium\[108410847] blood moon
+assets\transcendium\[108410868] the end of life
+assets\transcendium\[108410909] abiogenesis
+assets\transcendium\[108410928] forgotten wishes
+assets\transcendium\[108410968] untitled
+assets\transcendium\[108411003] the end of my mind
+assets\transcendium\[108411041] full moon eclipse
+assets\transcendium\[108411072] drowning in anxiety
+assets\transcendium\[108411114] the collapsing state of my mind
+assets\transcendium\[108411138] the gaping hole within my soul
+assets\transcendium\[108411175] Collapse -après la ruine--GRYSCL
+assets\transcendium\[108411209] Heavensdoor -reimagined-
+assets\transcendium\[108411237] crossroads
+assets\transcendium\[108411256] façade
+assets\transcendium\[108411271] dissolution
+assets\transcendium\[108419602] distortion
+assets\transcendium\[108473919] collapsar
+assets\transcendium\[108494359] wanderlust eternal
+assets\transcendium\[108533003] inogon
+assets\transcendium\[109143084] tainted cherish
+assets\transcendium\[109143567] 23 wounds
+assets\transcendium\[109143599] biprimal 28
+assets\transcendium\[109143614] Huffman’s code
+assets\transcendium\[109143632] Bellaso’s paradox + MdhvFt
+assets\transcendium\[109143638] the end is in sight
+assets\transcendium\[109179388] feel my conscious
+assets\transcendium\[109315610] moving
+assets\transcendium\[109409073] unspoken tears
+assets\transcendium\[109530556] alone intelligence -reimagined-
+assets\transcendium\[109795018] Get this drums
+assets\transcendium\[109795052] cof
+assets\transcendium\[109795078] Resolver
+assets\transcendium\[109795155] Luminous Entities Lost Heart
+assets\transcendium\[109798412] radioactive refuse
+assets\transcendium\[110006650] toxic sludge in my mind
+assets\transcendium\[110097672] seer
+assets\transcendium\[110230580] a stab in the dark
+assets\transcendium\[110320627] c speed
+assets\transcendium\[110420467] Lunar Gateway
+assets\transcendium\[110420485] last remote
+assets\transcendium\[110420509] Niflheimr
+assets\transcendium\[110420522] ETERNAL
+assets\transcendium\[110441984] Re-Define ~BtDO~
+assets\transcendium\[110490471] glazed
+assets\transcendium\[110537854] Feigned Innocence
+assets\transcendium\[110659196] Oblitus Requiem --AtFL--
+assets\transcendium\[110686294] nothing lasts forever,
+assets\transcendium\[110786634] snowfall
+assets\transcendium\[110916007] nuclear
+assets\transcendium\[111122999] Vanaheimr
+assets\transcendium\[111123033] 今この瞬間
+assets\transcendium\[111297766] -1 (Lundy's 00-00 Remix)
+assets\transcendium\[111328032] 【PIU PHOENIX】Lohxia
+assets\transcendium\[111346661] Ad astra itur ≡☆【BOF-NT】
+assets\transcendium\[111367706] Bl∞dmoon【BOF-NT】
+assets\transcendium\[111530957] burning effigy
+assets\transcendium\[111853360] iridescent
+assets\transcendium\[111979322] The 3rd Edition- Saaya’s Welcome
+assets\transcendium\[112011109] -1 -reimagined-
+assets\transcendium\[112031658] Advent of M,E,C,H,A,N,G,E,L,
+assets\transcendium\[112089074] πevergod【BOF-NT】
+assets\transcendium\[112126006] iridescent collapse
+assets\transcendium\[112218945] 直 -ST,-【BOF-NT】
+assets\transcendium\[112304393] chrysalism
+assets\transcendium\[112391509] the garden of earthly terror
+assets\transcendium\[112527857] heart of the sea
+assets\transcendium\[112649632] Synthesis,
+assets\transcendium\[112812215] 飢餓感
+assets\transcendium\[112947589] a new journey
+assets\transcendium\[112994863] painted
+assets\transcendium\[113091773] chaotics
+assets\transcendium\[113123864] cyberfantasia
+assets\transcendium\[113185637] 絶滅Mayday
+assets\transcendium\[113236138] kenopsia
+assets\transcendium\[113290145] vemödalen
+assets\transcendium\[113347987] hiybbprqag
+assets\transcendium\[113402265] apsifó
+assets\transcendium\[113450112] Rückkehrunruhe
+assets\transcendium\[113505179] darksphere
+assets\transcendium\[113560957] asymmetry
+assets\transcendium\[113561449] NOVO HORIZONTE
+assets\transcendium\[113569406] NEBULA
+assets\transcendium\[113617647] 雙體共生
+assets\transcendium\[113706684] heliocentrism
+assets\transcendium\[113757523] nanahuatzin
+assets\transcendium\[113812233] tecciztecatl
+assets\transcendium\[113866688] 63 K
+assets\transcendium\[113918796] paradiso
+assets\transcendium\[113971189] purgatorio
+assets\transcendium\[114022862] inferno
+assets\transcendium\[114075151] 自盡後
+assets\transcendium\[114130749] Antineutrino Witchcraft
+assets\transcendium\[114154619] Judgement for a Perilous Dilemma
+assets\transcendium\[114168863] scratched record
+assets\transcendium\[114209958] BARYOGENESIS
+assets\transcendium\[114254517] 彼岸花
+assets\transcendium\[114312083] monachopsis
+assets\transcendium\[114334632] LELH -reimagined-
+assets\transcendium\[114356188] 命懸一線
+assets\transcendium\[114419845] Brockengespenst
+assets\transcendium\[114464984] énouement
+assets\transcendium\[114532436] fitzcarraldo
+assets\transcendium\[114588900] The Arcanists' Heist of 739ME
+assets\transcendium\[114597095] upala
+assets\transcendium\[114661656] mal de coucou
+assets\transcendium\[114706702] mirage
+assets\transcendium\[114778989] 瀺灂
+assets\transcendium\[114839826] underwater cove
+assets\transcendium\[114900259] veluriyam
+assets\transcendium\[114969400] eyes of a dragon
+assets\transcendium\[115023463] 虚無
+assets\transcendium\[115085777] ambedo
+assets\transcendium\[115127861] the first sin
+assets\transcendium\[115191653] cycloheptane
+assets\transcendium\[115244952] panopticon
+assets\transcendium\[115302160] automata
+assets\transcendium\[115358813] wytai
+assets\transcendium\[115415354] scorched remains
+assets\transcendium\[115465189] rust
+assets\transcendium\[115512549] [EX-XDRiVER] City in the Clouds
+assets\transcendium\[115557569] cybernebula
+assets\transcendium\[115612055] golden
+assets\transcendium\[115667758] griseous core
+assets\transcendium\[115729696] 【vivid-stasis】Angel's Window
+assets\transcendium\[115786110] blacklotus
+assets\transcendium\[115841058] golden order
+assets\transcendium\[115894574] meso-tetratolylporphyrin
+assets\transcendium\[115966104] dreg heap
+assets\transcendium\[116014508] β CVn
+assets\transcendium\[116086448] Untitled
+assets\transcendium\[116105302] 【UNTONE】Body Glitter
+assets\transcendium\[116137164] lysergic acid diethylamide
+assets\transcendium\[116204991] petroleum ether
+assets\transcendium\[116259137] luciferin
+assets\transcendium\[116278901] exulansis
+assets\transcendium\[116349553] [Na(NH3)6]+ e−
+assets\transcendium\[116398421] My Angel Goodbye
+assets\transcendium\[116436107] mondlicht
+assets\transcendium\[116501809] algae bloom
+assets\transcendium\[116560990] distorted heavens
+assets\transcendium\[116617081] birefringence
+assets\transcendium\[116671853] heme
+assets\transcendium\[116725355] 【vivid-stasis】∀NARCHIC LIGHT
+assets\transcendium\[116725418] non-newtonian fluid
+assets\transcendium\[116792458] lead(II) orthoplumbate(IV)
+assets\transcendium\[116847372] New Page
+assets\transcendium\[116908206] ceaseless
+assets\transcendium\[116972261] malachite green
+assets\transcendium\[117033810] 【UNTONE】Blade
+assets\transcendium\[117087974] entangled reeds
+assets\transcendium\[117147057] Zn-Hg amalgam
+assets\transcendium\[117213276] forgotten shores
+assets\transcendium\[117257435] 【UNTONE】the point of no return
+assets\transcendium\[117294567] demented--madness
+assets\transcendium\[117349796] julia
+assets\transcendium\[117409611] tainted throne
+assets\transcendium\[117479851] Our Epilogue (SiLiS Remix)
+assets\transcendium\[117555279] strontium carbonate
+assets\transcendium\[117597870] dimethylsulfoxide
+assets\transcendium\[117664305] waves
+assets\transcendium\[117716715] 暗流
+assets\transcendium\[117776849] auld lang syne
+assets\transcendium\[117817706] ANTi;GENESIS
+assets\transcendium\[117899539] 【UNTONE】_0XB4D60DE
+assets\transcendium\[117944025] daguerreologue
+assets\transcendium\[118243488] ENERGY⁂DAMAGE
+assets\transcendium\[118518378] nodus tollens
+assets\transcendium\[118618801] 【UNTONE】Don't Want It
+assets\transcendium\[118687268] pastel
+assets\transcendium\[118744918] rogue wave
+assets\transcendium\[118801188] gaudière
+assets\transcendium\[118861226] JO204
+assets\transcendium\[118949017] chromium(III) acetylacetonate
+assets\transcendium\[119011776] bubble chamber
+assets\transcendium\[119080361] lumière
+assets\transcendium\[119145898] gouffre des rêves
+assets\transcendium\[119189872] Sagittarius A-
+assets\transcendium\[119264815] isopixel
+assets\transcendium\[119366190] aeroshell
+assets\transcendium\[119421804] ZSM-5
+assets\transcendium\[119485012] contours
+assets\transcendium\[119541562] ergosphere
+assets\transcendium\[119602545] epitaxy
+assets\transcendium\[119660883] molten
+assets\transcendium\[119724603] cytochrome b
+assets\transcendium\[119792400] vanadium(V) oxide
+assets\transcendium\[119830776] psilocybin
+assets\transcendium\[119950383] Circles in Ruin (alt)
+assets\transcendium\[119986285] jvarasura
+assets\transcendium\[120046632] migraine
+assets\transcendium\[120144997] eris
+assets\transcendium\[120207686] iris fulva
+assets\transcendium\[120257260] Athena's Shield (Director's Cut)
+assets\transcendium\[120379988] bismuth
+assets\transcendium\[120437845] polychroma,
+assets\transcendium\[120447923] isometric garden
+assets\transcendium\[120502211] land's end
+assets\transcendium\[120539304] Apokálypsis Melōdía
+assets\transcendium\[120609340] oceanus
+assets\transcendium\[120662501] 五光十色
+assets\transcendium\[120726890] desperation
+assets\transcendium\[120791997] Delusions (alt)
+assets\transcendium\[120866955] irresolute sands
+assets\transcendium\[120933201] nautilus
+assets\transcendium\[120991952] K2Cu(oxalate)2,H2O
