--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,29 @@
-[build]
-  publish = "public"
-  command = "hugo"
-
 [context.production.environment]
   HUGO_VERSION = "0.136.1"
+DART_SASS_VERSION = "1.79.4"
 
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.136.1"
+DART_SASS_VERSION = "1.79.4"
 
 [context.branch-deploy.environment]
   HUGO_VERSION = "0.136.1"
+DART_SASS_VERSION = "1.79.4"
 
 [context.next.environment]
   HUGO_VERSION = "0.136.1"
+DART_SASS_VERSION = "1.79.4"
 
 [build.environment]
   GIT_SUBMODULE_STRATEGY = "recursive"
+
+[build]
+  publish = "public"
+  #command = "hugo"
+command = """\
+  curl -LJO https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
+  tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
+  rm dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
+  export PATH=/opt/build/repo/dart-sass:$PATH && \
+  hugo \
+  """
